--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.gushiyu</groupId>
     <artifactId>spring-boot-webcrud</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <name>spring-boot-webcrud</name>
     <description>Demo project for Spring Boot</description>
 
