--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #spring.resources.static-locations=classpath:/hello
-server.servlet.context-path=/hellooo
+server.servlet.context-path=/
 #\u7981\u7528\u6A21\u677F\u5F15\u64CE\u7F13\u5B58
 spring.thymeleaf.cache=false
 spring.messages.basename=i18n.login
+spring.mvc.date-format=yyyy-MM-dd
